PRESIDECMS-34 Fixing z-index issues with version history modal in front end sites that also use bootstrap

--- a/system/assets/css/admin/core/core.less.css
+++ b/system/assets/css/admin/core/core.less.css
@@ -25455,3 +25455,6 @@ img.presidecms .editable-click:hover {
 .quick-edit-modal .modal-dialog .modal-footer {
   margin-top: 0;
 }
+.presidecms.modal-backdrop {
+  z-index: 1030;
+}
